--- a/mysite/templates/loggedin.html
+++ b/mysite/templates/loggedin.html
@@ -1,6 +1,15 @@
+
+{{ request.GET.proxy }}
 <ul>
-<li><a href="/proxy">proxy</a></li>
-<li><a href="/proxy/invite">invites</a></li>
+<li><a href="/proxy" class="b">proxy</a></li>
+<li><a class="b" href="/proxy/invite">invites</a></li>
 <li><a href="/logout/">logout</a></li>
 </ul>
+
+<form action="blah/" method="get">
+    <p><label>test<input type="text" value="b"/></label></p>
+</form> 
+<form action="bah" method="post">
+    <p><label>test<input type="text" value="b"/></label></p>
+</form> 
 
